# Group14

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  ci.yml
cw1/: gs.cpp
tests/: Mathematically_correct_answer.cpp  test_gs.cpp  test_gs.cpp.cpp
